circleci - use .gz for build artifact.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -111,10 +111,10 @@ jobs:
             stack update
             stack test --system-ghc --ghc-options="${GHC_OPTS} -Werror" .
             stack install --system-ghc --ghc-options="${GHC_OPTS}" --local-bin-path /tmp/artifacts
+            gzip /tmp/artifacts/pandoc
         - *save
         - store_artifacts:
-            path: /tmp/artifacts/pandoc
-            destination: pandoc-${CIRCLE_SHA1}
+            path: /tmp/artifacts/pandoc.gz
 
 workflows:
   version: "2.1"
