--- a/stack.yaml
+++ b/stack.yaml
@@ -19,15 +19,8 @@ packages:
   - foundation
   extra-dep: true
 extra-deps:
-- github: jgm/pandoc-citeproc
-  commit: e36c73ac45c54dec381920e92b199787601713d1
+- pandoc-citeproc-0.16
 - ipynb-0.1
-- haddock-library-1.7.0
-- HsYAML-0.1.1.2
-- yaml-0.11.0.0
-- libyaml-0.1.0.0
-- hslua-1.0.1
-- hslua-module-text-0.2.0
 ghc-options:
    "$locals": -fhide-source-paths -XNoImplicitPrelude
-resolver: lts-12.23
+resolver: lts-13.5
