--- a/stack.yaml
+++ b/stack.yaml
@@ -21,6 +21,7 @@ packages:
 extra-deps:
 - pandoc-citeproc-0.16
 - ipynb-0.1
+- texmath-0.11.2
 ghc-options:
    "$locals": -fhide-source-paths -XNoImplicitPrelude
 resolver: lts-13.5
