Adds Asciidoctor sprcific writer and tests

--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -70,6 +70,7 @@ data-files:
                  data/templates/default.revealjs
                  data/templates/default.dzslides
                  data/templates/default.asciidoc
+                 data/templates/default.asciidoctor
                  data/templates/default.haddock
                  data/templates/default.textile
                  data/templates/default.org
