--- a/cabal.project
+++ b/cabal.project
@@ -6,8 +6,7 @@ package pandoc
 package pandoc-citeproc
   flags: +embed_data_files +bibutils -unicode_collation -test_citeproc -debug
 
--- source-repository-package
---     type: git
---     location: https://github.com/jgm/pandoc-citeproc
---     tag: e36c73ac45c54dec381920e92b199787601713d1
-
+source-repository-package
+    type: git
+    location: https://github.com/jgm/pandoc-citeproc
+    tag: 0.16.0.1
