Added simple ipynb reader/writer tests.
Closes #5274.

--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -322,6 +322,9 @@ extra-source-files:
                  test/epub/*.native
                  test/pptx/*.pptx
                  test/pptx/*.native
+                 test/ipynb/*.in.native
+                 test/ipynb/*.out.native
+                 test/ipynb/*.ipynb
                  test/txt2tags.t2t
                  test/twiki-reader.twiki
                  test/tikiwiki-reader.tikiwiki
