Use latest skylighting.

--- a/stack.yaml
+++ b/stack.yaml
@@ -20,6 +20,8 @@ packages:
   extra-dep: true
 extra-deps:
 - pandoc-citeproc-0.16.0.2
+- skylighting-0.7.6
+- skylighting-core-0.7.6
 - ipynb-0.1
 - texmath-0.11.2
 ghc-options:
