T.P.Lua: split StackInstances into smaller Marshaling modules

--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -575,11 +575,15 @@ library
                    Text.Pandoc.Lua.Filter,
                    Text.Pandoc.Lua.Global,
                    Text.Pandoc.Lua.Init,
+                   Text.Pandoc.Lua.Marshaling,
+                   Text.Pandoc.Lua.Marshaling.AST,
+                   Text.Pandoc.Lua.Marshaling.AnyValue,
+                   Text.Pandoc.Lua.Marshaling.CommonState,
+                   Text.Pandoc.Lua.Marshaling.ReaderOptions,
                    Text.Pandoc.Lua.Module.MediaBag,
                    Text.Pandoc.Lua.Module.Pandoc,
                    Text.Pandoc.Lua.Module.Utils,
                    Text.Pandoc.Lua.Packages,
-                   Text.Pandoc.Lua.StackInstances,
                    Text.Pandoc.Lua.Util,
                    Text.Pandoc.CSS,
                    Text.Pandoc.CSV,
