--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -394,7 +394,7 @@ library
                  deepseq >= 1.3 && < 1.5,
                  JuicyPixels >= 3.1.6.1 && < 3.4,
                  Glob >= 0.7 && < 0.11,
-                 cmark-gfm == 0.1.6 || > 0.1.7,
+                 cmark-gfm == 0.1.6 || > 0.1.7 && < 0.2,
                  doctemplates >= 0.2.1 && < 0.3,
                  network-uri >= 2.6 && < 2.7,
                  network >= 2.6,
