--- a/stack.yaml
+++ b/stack.yaml
@@ -16,6 +16,7 @@ extra-deps:
 - skylighting-core-0.7.7
 - ipynb-0.1
 - texmath-0.11.2.2
+- cmark-gfm-0.1.8
 ghc-options:
    "$locals": -fhide-source-paths -XNoImplicitPrelude
 resolver: lts-13.9
