circleci - set path to use installed ghc.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ env: &env
 
 preinstall: &preinstall
   run: |
-      echo 'export PATH=/opt/cabal/bin:$PATH' >> $BASH_ENV
+      echo 'export PATH=/opt/cabal/bin:/opt/ghc/bin:$PATH' >> $BASH_ENV
       source $BASH_ENV
       apt-get update
 
@@ -47,11 +47,6 @@ commands:
           name: install ghc
           command: |
             apt-get install -y ghc-<< parameters.ghcversion >>
-            ghc --version
-            which ghc
-            echo $PATH
-            dpkg -S ghc-<< parameters.ghcversion >>
-            locate ghc-<< parameters.ghcversion >>
       - run:
           name: build project
           command: |
