--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,8 +65,8 @@ commands:
             # us to use -Werror for just local build:
             # https://github.com/haskell/cabal/issues/4247
             ! grep -q "warning:" build.log
-            cabal v2-test -w ghc-<< parameters.ghcversion >> -j2 --ghc-options="${GHC_OPTS}" all
-            cabal v2-haddock -w ghc-<< parameters.ghcversion >> -j2 --ghc-options="${GHC_OPTS}" all
+            cabal v2-test -w ghc-<< parameters.ghcversion >> -j2 --ghc-options="${GHC_OPTS}"
+            cabal v2-haddock -w ghc-<< parameters.ghcversion >> -j2 --ghc-options="${GHC_OPTS}"
             cabal check
       - *save
 
