Another try at circleci config.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,16 +57,16 @@ commands:
             cd ${TMPDIR}
             tar xvzf *.tar.gz
             cd *
-            cabal v2-build -w ghc-<< parameters.ghcversion >> -j2 --dependencies-only --enable-tests --ghc-options="${GHC_OPTS}" all
-            cabal v2-build -w ghc-<< parameters.ghcversion >> -j2 --enable-tests --ghc-options="${GHC_OPTS}" all 2>build.log
+            cabal v2-build -w ghc-<< parameters.ghcversion >> --dependencies-only --enable-tests
+            cabal v2-build -w ghc-<< parameters.ghcversion >> --enable-tests 2>build.log
             cat build.log
             # fail if we had warnings in local build
             # this is to work around the fact that cabal v2 doesn't allow
             # us to use -Werror for just local build:
             # https://github.com/haskell/cabal/issues/4247
             ! grep -q "warning:" build.log
-            cabal v2-test -w ghc-<< parameters.ghcversion >> -j2 --ghc-options="${GHC_OPTS}"
-            cabal v2-haddock -w ghc-<< parameters.ghcversion >> -j2 --ghc-options="${GHC_OPTS}"
+            cabal v2-test -w ghc-<< parameters.ghcversion >>
+            cabal v2-haddock -w ghc-<< parameters.ghcversion >>
             cabal check
       - *save
 
