--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,6 @@ version: "2.1"
 env: &env
     environment:
       LC_ALL: "C.UTF-8"
-      GHC_OPTS: "-O0 -Wall -fno-warn-unused-do-bind -Wincomplete-record-updates -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -Wincomplete-uni-patterns -Werror=missing-home-modules -Widentities -Wcpp-undef -fhide-source-paths"
     docker:
       - image: fpco/stack-build:lts
 
@@ -57,15 +56,15 @@ commands:
             cd ${TMPDIR}
             tar xvzf *.tar.gz
             cd *
-            cabal v2-build -w ghc-<< parameters.ghcversion >> --dependencies-only --enable-tests
-            cabal v2-build -w ghc-<< parameters.ghcversion >> --enable-tests 2>build.log
+            cabal v2-build -w ghc-<< parameters.ghcversion >> --disable-optimization --dependencies-only --enable-tests --enable-benchmarks
+            cabal v2-build -w ghc-<< parameters.ghcversion >> --disable-optimization --enable-tests --enable-benchmarks 2>build.log
             cat build.log
             # fail if we had warnings in local build
             # this is to work around the fact that cabal v2 doesn't allow
             # us to use -Werror for just local build:
             # https://github.com/haskell/cabal/issues/4247
             ! grep -q "warning:" build.log
-            cabal v2-test -w ghc-<< parameters.ghcversion >>
+            cabal v2-test -w ghc-<< parameters.ghcversion >> --disable-optimization --enable-tests
             cabal v2-haddock -w ghc-<< parameters.ghcversion >>
             cabal check
       - *save
@@ -115,7 +114,7 @@ jobs:
             set -e
             apt-get install -y ghc-8.6.3
             stack update
-            stack test --system-ghc --ghc-options="${GHC_OPTS} -Werror" .
+            stack test --system-ghc --fast --ghc-options="-Werror" .
         - *save
 
 workflows:
