--- a/stack.yaml
+++ b/stack.yaml
@@ -18,5 +18,5 @@ extra-deps:
 - texmath-0.11.2.2
 - cmark-gfm-0.1.8
 ghc-options:
-   "$locals": -Wall -fno-warn-unused-do-bind -Wincomplete-record-updates -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -Wincomplete-uni-patterns -Werror=missing-home-modules -Widentities -Wcpp-undef -fhide-source-paths -j +RTS -A32M -RTS
+   "$locals": -Wall -fno-warn-unused-do-bind -Wincomplete-record-updates -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -Wincomplete-uni-patterns -Werror=missing-home-modules -Widentities -Wcpp-undef -fhide-source-paths "+RTS -A32M -RTS"
 resolver: lts-13.9
