--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -375,6 +375,7 @@ library
                  random >= 1 && < 1.2,
                  pandoc-types >= 1.17.5 && < 1.18,
                  aeson >= 0.7 && < 1.5,
+                 scientific >= 0.3 && < 0.4,
                  aeson-pretty >= 0.8.5 && < 0.9,
                  tagsoup >= 0.14.6 && < 0.15,
                  base64-bytestring >= 0.1 && < 1.1,
