--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -339,6 +339,8 @@ extra-source-files:
                  test/odt/markdown/*.md
                  test/odt/native/*.native
                  test/lua/*.lua
+                 test/lua/module/pandoc.lua
+                 test/lua/module/pandoc.utils.lua
 source-repository head
   type:          git
   location:      git://github.com/jgm/pandoc.git
@@ -681,6 +683,7 @@ test-suite test-pandoc
                   Diff >= 0.2 && < 0.4,
                   tasty >= 0.11 && < 1.3,
                   tasty-hunit >= 0.9 && < 0.11,
+                  tasty-lua >= 0.2 && < 0.3,
                   tasty-quickcheck >= 0.8 && < 0.11,
                   tasty-golden >= 2.3 && < 2.4,
                   QuickCheck >= 2.4 && < 2.14,
@@ -699,6 +702,7 @@ test-suite test-pandoc
                   Tests.Command
                   Tests.Helpers
                   Tests.Lua
+                  Tests.Lua.Module
                   Tests.Shared
                   Tests.Readers.LaTeX
                   Tests.Readers.HTML
