--- a/stack.yaml
+++ b/stack.yaml
@@ -14,7 +14,9 @@ extra-deps:
 - pandoc-citeproc-0.16.2
 - ipynb-0.1
 - cmark-gfm-0.2.0
+- hslua-1.0.3.1
 - hslua-module-system-0.2.0
+- tasty-lua-0.2.0
 ghc-options:
    "$locals": -Wall -fno-warn-unused-do-bind -Wincomplete-record-updates -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -Wincomplete-uni-patterns -Widentities -Wcpp-undef -fhide-source-paths
 resolver: lts-13.17
