--- a/stack.yaml
+++ b/stack.yaml
@@ -18,5 +18,5 @@ extra-deps:
 - hslua-module-system-0.2.0
 - tasty-lua-0.2.0
 ghc-options:
-   "$locals": -Wall -fno-warn-unused-do-bind -Wincomplete-record-updates -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -Wincomplete-uni-patterns -Widentities -Wcpp-undef -fhide-source-paths
+   "$locals": -Wall -fno-warn-unused-do-bind -Wincomplete-record-updates -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -Wincomplete-uni-patterns -Widentities -Wcpp-undef -fhide-source-paths -Wno-missing-home-modules
 resolver: lts-13.17
