--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -408,7 +408,7 @@ library
                  JuicyPixels >= 3.1.6.1 && < 3.4,
                  Glob >= 0.7 && < 0.11,
                  cmark-gfm >= 0.2 && < 0.3,
-                 doctemplates >= 0.2.2.1 && < 0.4,
+                 doctemplates >= 0.3 && < 0.4,
                  network-uri >= 2.6 && < 2.7,
                  network >= 2.6,
                  http-client >= 0.4.30 && < 0.7,
@@ -677,6 +677,7 @@ test-suite test-pandoc
   build-depends:  base >= 4.8 && < 5,
                   pandoc,
                   pandoc-types >= 1.17.5 && < 1.18,
+                  mtl >= 2.2 && < 2.3,
                   bytestring >= 0.9 && < 0.11,
                   base64-bytestring >= 0.1 && < 1.1,
                   text >= 1.1.1.0 && < 1.3,
