--- a/stack.yaml
+++ b/stack.yaml
@@ -19,6 +19,7 @@ extra-deps:
 - tasty-lua-0.2.0
 - skylighting-core-0.8.2
 - skylighting-0.8.2
+- doctemplates-0.3
 ghc-options:
    "$locals": -Wall -fno-warn-unused-do-bind -Wincomplete-record-updates -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -Wincomplete-uni-patterns -Widentities -Wcpp-undef -fhide-source-paths -Wno-missing-home-modules
 resolver: lts-13.17
