--- a/cabal.project
+++ b/cabal.project
@@ -11,4 +11,4 @@ package pandoc-citeproc
 source-repository-package
     type: git
     location: https://github.com/jgm/pandoc-citeproc
-    tag: 0.16.2
+    tag: f2ea0ca183a950ece0cba950fe96b05065d1f07b
