pandoc.cabal: add cabal.project to extra-source-files.

--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -182,7 +182,8 @@ extra-source-files:
                  INSTALL.md, AUTHORS.md, README.md,
                  CONTRIBUTING.md, BUGS, changelog,
                  man/pandoc.1
-                 -- stack build plan
+                 -- cabal and stack build plans
+                 cabal.project
                  stack.yaml
                  -- files needed to build man page
                  man/manfilter.lua
