--- a/cabal.project
+++ b/cabal.project
@@ -2,11 +2,11 @@ packages: pandoc.cabal
 
 package pandoc
   flags: +embed_data_files -trypandoc
-  ghc-options: -Wall -fno-warn-unused-do-bind -Wincomplete-record-updates -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -Wincomplete-uni-patterns -Widentities -j +RTS -A32M -RTS
+  ghc-options: -j +RTS -A32M -RTS
 
 package pandoc-citeproc
   flags: +embed_data_files +bibutils -unicode_collation -test_citeproc -debug
-  ghc-options: -Wall -fno-warn-unused-do-bind -Wincomplete-record-updates -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -Wincomplete-uni-patterns -Widentities -j +RTS -A32M -RTS
+  ghc-options: -j +RTS -A32M -RTS
 
 source-repository-package
     type: git
