--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -417,7 +417,7 @@ library
                  http-types >= 0.8 && < 0.13,
                  case-insensitive >= 1.2 && < 1.3,
                  unicode-transforms >= 0.3 && < 0.4,
-                 HsYAML >= 0.1.1.1 && < 0.2,
+                 HsYAML >= 0.2,
                  ipynb >= 0.1 && < 0.2,
                  attoparsec >= 0.12 && < 0.14
   if impl(ghc < 8.0)
