Fix stack build fails

--- a/stack.yaml
+++ b/stack.yaml
@@ -16,6 +16,10 @@ extra-deps:
   commit: 6d62678ece91bbb4fe4f5a99695006e1d53c3bae
 - git: https://github.com/tarleb/pandoc-types
   commit: a087b0174a597b92c5fec4d633c46887c188b496
+- git: https://github.com/vijayphoenix/HsYAML.git
+  commit: 9354f53c69e9178a8e7c5c17b47137e23d4179df
+- git: https://github.com/vijayphoenix/HsYAML-aeson.git
+  commit: b4808ee9bd7e73eeafc7f6695e98a8c591d68f11
 - ipynb-0.1
 - cmark-gfm-0.2.0
 - hslua-1.0.3.1
