--- a/stack.yaml
+++ b/stack.yaml
@@ -23,7 +23,9 @@ extra-deps:
 - skylighting-core-0.8.2
 - skylighting-0.8.2
 - doclayout-0.1
-- doctemplates-0.5
+  #- doctemplates-0.5
+- git: https://github.com/jgm/doctemplates
+  commit: 2f7e7ea71d75b58b52f7ee4122b43aa5d5f68445
 ghc-options:
    "$locals": -Wall -fno-warn-unused-do-bind -Wincomplete-record-updates -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -Wincomplete-uni-patterns -Widentities -Wcpp-undef -fhide-source-paths -Wno-missing-home-modules
 resolver: lts-13.17
