Add ghc 8.8.1 to CI.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,6 +74,12 @@ commands:
 #-----------------------------------------------------------------------------
 
 jobs:
+  cabal-ghc-8_8_1:
+      <<: *env
+      steps:
+          - cabal_build:
+              ghcversion: 8.8.1
+
   cabal-ghc-8_6_5:
       <<: *env
       steps:
@@ -115,6 +121,7 @@ workflows:
   version: "2.1"
   build:
     jobs:
+      - cabal-ghc-8_8_1
       - cabal-ghc-8_6_5
       - cabal-ghc-8_4_4
       - cabal-ghc-8_2_2
