--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -423,13 +423,7 @@ library
                  doclayout >= 0.1 && < 0.2,
                  ipynb >= 0.1 && < 0.2,
                  attoparsec >= 0.12 && < 0.14
-  if impl(ghc < 8.0)
-    build-depends: semigroups == 0.18.*,
-                   -- basement 0.0.8 and foundation 0.0.21, transitive
-                   -- dependencies, drop support for ghc 7.10.
-                   basement < 0.0.8,
-                   foundation < 0.0.21
-  if impl(ghc >= 8.0) && os(windows) && arch(i386)
+  if os(windows) && arch(i386)
      build-depends: basement >= 0.0.10,
                     foundation >= 0.0.23
                     -- basement 0.0.9 won't build on 32-bit windows.
@@ -450,14 +444,17 @@ library
   if os(windows)
     cpp-options:      -D_WINDOWS
   ghc-options:     -Wall -fno-warn-unused-do-bind
-  if impl(ghc > 8.0)
-    ghc-options:     -Wincomplete-record-updates
-                     -Wnoncanonical-monad-instances
-                     -Wnoncanonical-monadfail-instances
-  if impl(ghc > 8.4)
+                   -Wincomplete-record-updates
+                   -Wnoncanonical-monad-instances
+                   -Wnoncanonical-monadfail-instances
+  if impl(ghc >= 8.2)
+    ghc-options:     -Wcpp-undef
+  if impl(ghc >= 8.4)
     ghc-options:     -Wincomplete-uni-patterns
                      -Widentities
                      -Werror=missing-home-modules
+                     -fhide-source-paths
+
   default-language: Haskell2010
   other-extensions: NoImplicitPrelude
   hs-source-dirs:  src
@@ -621,8 +618,6 @@ library
 
 executable pandoc
   build-depends: pandoc, base >= 4.8 && < 5
-  if impl(ghc < 8.0)
-    build-depends: semigroups == 0.18.*
   if impl(ghc < 8.4)
      hs-source-dirs: prelude
      other-modules:  Prelude
@@ -648,8 +643,6 @@ executable trypandoc
     buildable:     True
   else
     buildable:     False
-  if impl(ghc < 8.0)
-    build-depends: semigroups == 0.18.*
   if impl(ghc < 8.4)
      hs-source-dirs: prelude
      other-modules:  Prelude
@@ -664,8 +657,6 @@ benchmark weigh-pandoc
                    text,
                    weigh >= 0.0 && < 0.1,
                    mtl >= 2.2 && < 2.3
-  if impl(ghc < 8.0)
-    build-depends: semigroups == 0.18.*
   if impl(ghc < 8.4)
      hs-source-dirs: prelude
      other-modules:  Prelude
@@ -703,8 +694,6 @@ test-suite test-pandoc
                   zip-archive >= 0.2.3.4 && < 0.5,
                   xml >= 1.3.12 && < 1.4,
                   Glob >= 0.7 && < 0.11
-  if impl(ghc < 8.0)
-    build-depends: semigroups == 0.18.*
   if impl(ghc < 8.4)
      hs-source-dirs: prelude
      other-modules:  Prelude
@@ -776,8 +765,6 @@ benchmark benchmark-pandoc
                    text >= 1.1.1.0 && < 1.3,
                    mtl >= 2.2 && < 2.3,
                    criterion >= 1.0 && < 1.6
-  if impl(ghc < 8.0)
-    build-depends: semigroups == 0.18.*
   if impl(ghc < 8.4)
      hs-source-dirs: prelude
      other-modules:  Prelude
