--- a/stack.yaml
+++ b/stack.yaml
@@ -27,5 +27,5 @@ extra-deps:
 - git: https://github.com/jgm/doctemplates
   commit: 2f7e7ea71d75b58b52f7ee4122b43aa5d5f68445
 ghc-options:
-   "$locals": -Wall -fno-warn-unused-do-bind -Wincomplete-record-updates -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -Wincomplete-uni-patterns -Widentities -Wcpp-undef -fhide-source-paths -Wno-missing-home-modules
+   "$locals": -fhide-source-paths -Wno-missing-home-modules
 resolver: lts-13.17
