--- a/stack.yaml
+++ b/stack.yaml
@@ -23,9 +23,7 @@ extra-deps:
 - skylighting-core-0.8.2
 - skylighting-0.8.2
 - doclayout-0.1
-  #- doctemplates-0.5
-- git: https://github.com/jgm/doctemplates
-  commit: 2f7e7ea71d75b58b52f7ee4122b43aa5d5f68445
+- doctemplates-0.6
 ghc-options:
    "$locals": -fhide-source-paths -Wno-missing-home-modules
 resolver: lts-13.17
