--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -41,6 +41,7 @@ description:     Pandoc is a Haskell library for converting from one markup
                  only adding a reader or writer.
 data-files:
                  -- templates
+                 data/templates/styles.html
                  data/templates/default.html4
                  data/templates/default.html5
                  data/templates/default.docbook4
