--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -397,6 +397,7 @@ library
                  base64-bytestring >= 0.1 && < 1.1,
                  zlib >= 0.5 && < 0.7,
                  skylighting >= 0.8.2 && < 0.9,
+                 skylighting-core >= 0.8.2 && < 0.9,
                  data-default >= 0.4 && < 0.8,
                  temporary >= 1.1 && < 1.4,
                  blaze-html >= 0.9 && < 0.10,
