GitHUB CI: Try installing recent cabal.

--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -4,15 +4,17 @@ on: [push]
 
 jobs:
   build:
-   
+
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v1
+    - name: Install recent cabal/ghc
+      run: add-apt-repository ppa:hvr/ghc && apt-get update && apt-get install ghc-8.6.4 cabal-install-2.4
     - name: Install dependencies
-      run: cabal update && cabal install --dependencies-only --enable-tests
+      run: cabal v2-update && cabal v2-build --dependencies-only --enable-tests
     - name: Build
       run: |
-        cabal configure --enable-tests && cabal build
+        cabal v2-build --enable-tests
     - name: Run tests
-      run: cabal test
+      run: cabal v2-test
