GitHub CI - set path.

--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -10,11 +10,19 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Install recent cabal/ghc
-      run: sudo add-apt-repository ppa:hvr/ghc && sudo apt-get update && sudo apt-get install ghc-8.6.4 cabal-install-2.4
+      run: |
+          sudo add-apt-repository ppa:hvr/ghc
+          sudo apt-get update
+          sudo apt-get install ghc-8.6.4 cabal-install-2.4
+    - name: Set path to include new ghc and cabal
+          export PATH=/opt/cabal/bin:/opt/ghc/bin:$PATH
     - name: Install dependencies
-      run: cabal v2-update && cabal v2-build --dependencies-only --enable-tests
+      run: |
+          cabal v2-update
+          cabal v2-build --dependencies-only --enable-tests
     - name: Build
       run: |
-        cabal v2-build --enable-tests
+          cabal v2-build --enable-tests
     - name: Run tests
-      run: cabal v2-test
+      run: |
+          cabal v2-test
