Github CI/windows: separate dependencies step.

--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -38,8 +38,11 @@ jobs:
       shell: cmd
       run: |
           choco install haskell-stack
+    - name: Install dependencies
+      run: |
+          stack update
+          stack test --dependencies-only
     - name: Build and test
       shell: cmd
       run: |
-          stack update
           stack test
